Updating .env file

--- a/.env
+++ b/.env
@@ -1,5 +1,17 @@
+# database config:
 DATABASE=mysql
 DB_HOST=127.0.0.1
 DB_NAME=hcode_ecommerce_db
 DB_USER=root
-DB_PASSWORD=root
+DB_PASSWORD=
+
+# openssl config:
+SECRET_IV=
+SECRET=
+
+# link config
+VIRTUAL_HOST_DOMAIN=
+
+# phpMailer config:
+EMAIL=
+MAIL_PASSWORD=
